--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: php
 
 php:
-  - 7.2
-  - 7.3
-  - 7.4
+  - 8.0
+  - 8.1
 
 env:
   global:
@@ -12,8 +11,8 @@ env:
     - PHPCS_REPORT_STYLE: 'full'
     - COMPOSER_OPTIONS: '--optimize-autoloader'
   jobs:
-    - SYMFONY_VERSION: '~4.0'
-    - SYMFONY_VERSION: '~5.0'
+    - SYMFONY_VERSION: '^5.4'
+    - SYMFONY_VERSION: '^6.0'
 
 jobs:
   fast_finish: true
@@ -23,7 +22,8 @@ before_install:
   - phpenv config-rm xdebug.ini || true
 
 install:
-  - composer require symfony/http-kernel:$SYMFONY_VERSION symfony/dependency-injection:$SYMFONY_VERSION symfony/config:$SYMFONY_VERSION symfony/routing:$SYMFONY_VERSION
+  - composer require symfony/http-kernel:$SYMFONY_VERSION symfony/dependency-injection:$SYMFONY_VERSION symfony/config:$SYMFONY_VERSION
+  - composer require --dev symfony/routing:$SYMFONY_VERSION symfony/framework-bundle:$SYMFONY_VERSION
   - make build
 script:
   - make test-technical
