--- a/composer.json
+++ b/composer.json
@@ -32,14 +32,20 @@
     "yoanm/symfony-jsonrpc-http-server": "Symfony Bundle to convert an HTTP json-rpc request into HTTP json-rpc response",
     "yoanm/symfony-jsonrpc-params-sf-constraints-doc": "To generate payload documentation from validation constraints"
   },
+  "repositories": [
+    {
+      "type": "github",
+      "url": "https://github.com/sbooker/symfony-jsonrpc-http-server.git"
+    }
+  ],
   "require": {
-    "php": ">=7.2",
-    "symfony/config": "^4.0 || ^5.0",
-    "symfony/dependency-injection": "^4.0 || ^5.0",
-    "symfony/http-kernel": "^4.0 || ^5.0",
+    "php": "^8.0",
+    "symfony/config": "^5.4 || ^6.0",
+    "symfony/dependency-injection": "^5.4 || ^6.0",
+    "symfony/http-kernel": "^5.4 || ^6.0",
     "yoanm/jsonrpc-params-symfony-validator-sdk": "^2.0",
     "yoanm/jsonrpc-server-sdk": "^3.0",
-    "yoanm/symfony-jsonrpc-http-server": "^3.0"
+    "yoanm/symfony-jsonrpc-http-server": "^4.0"
   },
   "require-dev": {
     "ext-json": "*",
@@ -48,8 +54,8 @@
     "matthiasnoback/symfony-dependency-injection-test": "^3.0 || ^4.0",
     "phpunit/phpunit": "^7.0 || ^8.0",
     "squizlabs/php_codesniffer": "3.*",
-    "symfony/framework-bundle": "^4.0 || ^5.0",
-    "symfony/routing": "^4.0 || ^5.0",
+    "symfony/framework-bundle": "^5.4 || ^6.0",
+    "symfony/routing": "^5.4 || ^6.0",
     "yoanm/php-unit-extended": "~1.0"
   }
 }
